--- a/mock/public/index.html
+++ b/mock/public/index.html
@@ -19,18 +19,18 @@
     <hr>
 
     <div class="container">
-         <h3 class="bg-primary">/books/foo</h3>
+         <h3 class="bg-primary">/books/foo <span class="glyphicon glyphicon-file" aria-hidden="true"></span> <span class="h6" >src/books/foo.json</span></h3>
 <ul>
 <li> <a href="http://localhost:3000/books/foo/bar">/books/foo/bar </a></li>
 </ul>
- <h3 class="bg-primary">/books</h3>
+ <h3 class="bg-primary">/books <span class="glyphicon glyphicon-file" aria-hidden="true"></span> <span class="h6" >src/books/index.json</span></h3>
 <ul>
 <li> <a href="http://localhost:3000/books/update">/books/update </a></li>
 <li> <a href="http://localhost:3000/books/retrieve">/books/retrieve </a></li>
 <li> <a href="http://localhost:3000/books/create">/books/create </a></li>
 <li> <a href="http://localhost:3000/books/delete">/books/delete </a></li>
 </ul>
- <h3 class="bg-primary">/user</h3>
+ <h3 class="bg-primary">/user <span class="glyphicon glyphicon-file" aria-hidden="true"></span> <span class="h6" >src/user.js</span></h3>
 <ul>
 <li> <a href="http://localhost:3000/user/list">/user/list </a></li>
 </ul>
